footer & ocntact done

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <meta charset="UTF-8" />
   <title>Chinese Institute</title>
-
+  <link rel="icon" href="images/chinese-language.png" type="image/png" >
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/linearicons.css" />
   <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -75,13 +75,13 @@
   </section>
 
   <section class="gallery  mt-50 pt-4 pb-4" id="gallery">
-    <div class="container">
-      <div class="row mb-3">
-        <div class="col-md-12 text-center mb-2">
-          <h4>PHOTO GALLERY</h4>
+    <div class="container bg-red">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h4 class="mb-3 mt-3">PHOTO GALLERY</h4>
         </div>
       </div>
-      <div class="row">
+      <div class="row pl-90 pr-90 pb-40">
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
           <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
@@ -122,12 +122,11 @@
     </div>
   </section>
 
-  <section class="contact bg-grey-light pb-4 pt-5" id="contact">
-    <div class="container">
-      <div class="row mb-3">
+  <section class="contact pb-4 pt-5" id="contact">
+    <div class="container bg-red">
+      <div class="row ">
         <div class="col-md-8 offset-md-2 offset-lg-2 text-center">
-          <span class="contact-icon mb-2"><img src="images/monno/contact.png" class="img-fluid"></span>
-          <h4 class="text-uppercase">contacts</h4>
+          <h4 class="text-uppercase mb-4 mt-4">contacts</h4>
         </div>
       </div>
       <div class="row">
@@ -146,7 +145,7 @@
               <textarea class="form-control" id="message" rows="10" placeholder="Message"></textarea>
             </div>
             <div class="form-group text-center">
-              <button type="submit" class="btn btn-danger">SEND</button>
+              <button type="submit" class="btn">SEND</button>
             </div>
           </form>
         </div>
@@ -157,12 +156,16 @@
   <footer class="footer-area">
     <div class="container">
       <div class="footer-bottom row align-items-center">
-        <div class="section-title-footer col-lg-8 col-md-4 mt-4">
-          <h6>© 2019 <a href="https://shoroborno.com/">Shoroborno.</a> All Rights Reserved.</h6>
-        </div>
-        <div class="col-lg-4 col-md-8 col-sm-6 footer-social mt-4">
+        <div class="col-lg-8 col-md-8 col-sm-12 footer-social mt-4 offset-md-2 offset-lg-2">
           <a href="https://www.facebook.com/shoroborno.sms" target="blank"><i class="fa fa-facebook"></i></a>
           <a href="https://twitter.com/augnitive" target="blank"><i class="fa fa-twitter"></i></a>
+        </div>
+        <div class="col-lg-10 col-md-10 col-sm-12 offset-md-1 offset-lg-1 mt-4 section-title-footer">
+          <h6 class=" text-center text-uppercase">Chinese Language</h6>
+          <p class="text-center">
+            Zaman Tower (6th Floor), 37/2 Purana Paltan, Culvert Road, Dhaka 1000, Bangladesh.<br/>
+            Cell: +88 01711 879110, +88 01711 878412
+          </p>
         </div>
       </div>
     </div>
