--- a/HTML/index.html
+++ b/HTML/index.html
@@ -55,33 +55,41 @@
   </header>
 
   <section class=" mt-50">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-12 pl-md-4 pl-lg-4">
-          <img src="images/monno/founder-chairman.jpg" class="img-fluid">
-        </div>
-        <div class="col-lg-8 col-md-8 col-sm-12">
-          <div class="section-title about-details text-justify">
-            <h4 class=" mb-3">FOUNDER CHAIRMAN</h4>
+    <div class="container bg-red">
+      <div class="row ">
+        <div class="col-lg-8 col-md-8 col-sm-12 pt-40">
+          <div class="text-justify pl-40">
             <p>Late Harunar Rashid Khan Monno was the pioneer of industrial revolution of Bangladesh after Liberation war 1971. He was a leading person among post war entrepreneurs of Bangladesh. He harbored thousands of stories of different phases and experiences to be a person like him. He started his journey as an orphan losing his father in his early childhood. He struggled for both of his survival and study simultaneously. As a natural talent he was able to secure his post graduate degree on Chartered Accountancy with glorious result before Liberation War in 1971.</p>
-            <br/>
-            <p>He proved poverty is nothing before an indomitable spirit. He ventured as an entrepreneur after completing his highest Degree, ignoring prestigious job offers, presuming that his entrepreneurship would be the only way to serve a newly born Bangladesh which was dismantled, destroyed and collapsed during war. His patriotic vision and change making approach honored and glorified Bangladesh across the globe through his industries and business concerns. He was regarded as the “Son of Success”.</p>
-            <br/>
-            <p>As a pure philanthropist and educationist Late Harunar Rashid Khan Monno considers English to be a sophisticated weapon to cope with the challenges of modern civilization. Therefore, He sets up an International standard school to introduce a merit based society and to contribute to the nation. He bequeathed a land with an area of 2.97 acres to establish Monno International School and College in Monno City, in 2013 which offers a space of natural and scenic beauty full of eye-catching green.   </p>
           </div>
+          <div class="section-title title-left w-75">
+            <h2 class="pl-40">WHY CHOOSE US?</h2>
+          </div>
+          <div class="text-justify pl-40">
+            <ul>
+              <li>Late Harunar Rashid Khan</li>
+              <li>Late Harunar Rashid Khan</li>
+              <li>Late Harunar Rashid Khan</li>
+              <li>Late Harunar Rashid Khan</li>
+              <li>Late Harunar Rashid Khan</li>
+            </ul>
+            <p class="tag-bottom">WHY CHOOSE US?</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 pl-md-4 pl-lg-4 pt-40 pr-40">
+          <img src="images/why-us.png" class="img-fluid">
         </div>
       </div>
     </div>
   </section>
 
-  <section class="gallery  mt-50 pt-4 pb-4" id="gallery">
+  <section class="gallery mt-50 pt-4 pb-4" id="gallery">
     <div class="container bg-red">
       <div class="row">
         <div class="col-md-12 text-center">
           <h4 class="mb-3 mt-3">PHOTO GALLERY</h4>
         </div>
       </div>
-      <div class="row pl-90 pr-90 pb-40">
+      <div class="row pl-40 pr-40 pb-40">
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
           <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
