--- a/HTML/index.html
+++ b/HTML/index.html
@@ -54,34 +54,144 @@
     </nav>
   </header>
 
-  <section class=" mt-50">
+  <section class="banner mt-50">
     <div class="container bg-red">
       <div class="row ">
-        <div class="col-lg-8 col-md-8 col-sm-12 pt-40">
-          <div class="text-justify pl-40">
-            <p>Late Harunar Rashid Khan Monno was the pioneer of industrial revolution of Bangladesh after Liberation war 1971. He was a leading person among post war entrepreneurs of Bangladesh. He harbored thousands of stories of different phases and experiences to be a person like him. He started his journey as an orphan losing his father in his early childhood. He struggled for both of his survival and study simultaneously. As a natural talent he was able to secure his post graduate degree on Chartered Accountancy with glorious result before Liberation War in 1971.</p>
+        <div class="col-lg-7 col-md-5 col-sm-12 why-us ">
+          <div class="text-justify pl-90 slogan">
+            <p>LEARN <span class="txt-big font-weight-bold">CHINESE</span></p>
+            <p>IN THE FASTEST, <span class="txt-big font-weight-bold">EASIEST</span></p>
+            <p>AND MOST <span class="txt-big font-weight-bold">FUNNY WAY</span></p>
           </div>
-          <div class="section-title title-left w-75">
-            <h2 class="pl-40">WHY CHOOSE US?</h2>
+          <div class="section-title title-left w-75 mb-2 mt-3">
+            <h2 class="pl-90 pt-2 pb-2 bg-dark">WHY CHOOSE US?</h2>
           </div>
-          <div class="text-justify pl-40">
+          <div class="text-justify pl-90">
             <ul>
-              <li>Late Harunar Rashid Khan</li>
-              <li>Late Harunar Rashid Khan</li>
-              <li>Late Harunar Rashid Khan</li>
-              <li>Late Harunar Rashid Khan</li>
-              <li>Late Harunar Rashid Khan</li>
+              <li>NO BORING TEXT BOOKS</li>
+              <li>ON DEMAND CONTENT</li>
+              <li>JUST 24 LESSONS</li>
+              <li>ALL THE WAY FROM ELEMENTORY TO ADVANCED</li>
             </ul>
-            <p class="tag-bottom">WHY CHOOSE US?</p>
+            <p class="tagline-bottom mt-30">Making Chinese Fun and Easy</p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 pl-md-4 pl-lg-4 pt-40 pr-40">
+        <div class="col-lg-5 col-md-5 col-sm-12 pl-md-4 pl-lg-4 pt-40 pr-90">
           <img src="images/why-us.png" class="img-fluid">
         </div>
       </div>
     </div>
   </section>
+  <!-- about us -->
+  <section class="about-us mt-50">
+    <div class="container">
+      <div class="row pl-90 pr-90">
+        <div class="col-lg-6 col-md-6 col-sm-12 pl-md-4 pl-lg-4 ">
+          <img src="images/about-us.png" class="img-fluid">
+        </div>
+        <div class="col-lg-5 col-md-5 col-sm-12 why-us ">
+          <div class="section-title mb-2">
+            <h2>ABOUT US</h2>
+          </div>
+          <div class="text-justify">
+            <h4>WHO WE ARE</h4>
+            <p>With language skills growing in importance in the job market, yet fewer than 1 in 100 Bangladeshis able to speak a second language, 
+              Chinese Institute is a national campaign aimed at making language proficiency a national priority.</p>
+              <h4>WHAT WE DO</h4>
+              <p>We seek to raise awareness across the country and motivate people to take action around the rapidly rising importance of language skills to a wide array of careers—and to our nation’s economy, national security and international standing.</p>
+              <h4>WHY WE DO IT</h4>
+              <p>Our ultimate goal is to create a new generation of Bangladeshis competent in other languages and cultures and fully equipped to compete and succeed in a global economy.</p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end about us -->
+  <!-- CLP -->
+  <section class="clp">
+    <div class="container bg-red">
+      <div class="row pt-20">
+        <div class="col-lg-7 col-md-7 col-sm-12 ">
+          <img src="images/clp.png" class="img-fluid ">
+        </div>
+        <div class="col-lg-5 col-md-6 col-sm-12 why-us ">
+          <div class="section-title title-right bg-dark mb-2 ">
+            <h3 class="font-red p-1">CHINESE LANGUAGE PROGRAM(CLP)</h3>
+          </div>
+          <div class="text-justify pr-90">
+            <p>A lively introduction to Mandarin from the Real Chinese.</p>
+            <h4>Topics</h4>
+            <ul>
+              <li>Introducing yourself	</li>
+              <li>Family introductions</li>
+              <li>Saying a bit about yourself</li>
+              <li>Ordering drinks</li>
+              <li>Ordering a meal</li>
+              <li>Doing some shopping</li>
+              <li>Asking for directions</li>
+              <li>Getting around by public transport</li>
+              <li>Finding and booking a hotel</li>
+              <li>Daily greetings</li>
+              <li>Business and job interview</li>
+            </ul>
+            <h4>Each topic contains</h4>
+            <ul>
+              <li>	A Slideshow With The Key Language</li>
+              <li>Tips On Pronunciation And Grammar</li>
+              <li>Cultural Notes</li>
+              <li>A Challenge</li>
+              <li>Video Clips From Real Chinese </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end CLP -->
+  <!-- export import  -->
+  <section class="export mt-30">
+    <div class="container">
+      <div class="row pt-20">
+        <div class="col-lg-7 col-md-7 col-sm-12 pt-md-5">
+          <img src="images/export-import.png" class="img-fluid ">
+        </div>
+        <div class="col-lg-5 col-md-6 col-sm-12 why-us ">
+          <div class="section-title mb-2 ">
+            <h3 class="font-red p-1">EXPORT TRAINING</h3>
+          </div>
+          <div class="text-justify pr-90">
+            <h4>INTROUCTION</h4>
+            <p>The main activities in the import and export business are purchasing, marketing and knowing related domestic & international procedures and administration. In order to familiarize these matters, the training course has been offered</p>
+            <h4>COURSE CONTENTS</h4>
+            <ul class="ml-md-3">
+              <li>General Steps for Import & Export Procedures</li>
+              <li>Import Procedures; Types of Importers;</li>
+              <li>Different types of L/Cs and Obligations of 
+                Different Parties involved in L/C;</li>
+              <li>Export Diversification and Quality 
+                Improvement;</li>
+              <li>Export Procedures & Registration,</li>
+              <li>Checking and Advising of Export L/C;</li>
+              <li>EPC, ERF & Preparation of Export Documents,</li>
+              <li>	Negotiation of Export Documents,</li>
+              <li>Export Incentives, Disputes and Settlement of 
+                Export Claims;</li>
+                
+              <li>Functions of C & F Agents; Negotiations for 
+                Commission and Realization thereof;</li>
+              <li>Duties and Taxes for Importable Products in 
+                the Light of Latest Changes in National   
+                Budget;</li>
+              <li>Indenting Business in Bangladesh; Test of 
+                learning through group presentation.</li>
+            </ul>
 
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end export import  -->
   <section class="gallery mt-50 pt-4 pb-4" id="gallery">
     <div class="container bg-red">
       <div class="row">
