1 section & menu left

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -121,7 +121,7 @@
           <div class="text-justify pr-90">
             <p>A lively introduction to Mandarin from the Real Chinese.</p>
             <h4>Topics</h4>
-            <ul>
+            <ul class="ml-ul">
               <li>Introducing yourself	</li>
               <li>Family introductions</li>
               <li>Saying a bit about yourself</li>
@@ -135,7 +135,7 @@
               <li>Business and job interview</li>
             </ul>
             <h4>Each topic contains</h4>
-            <ul>
+            <ul class="ml-ul">
               <li>	A Slideshow With The Key Language</li>
               <li>Tips On Pronunciation And Grammar</li>
               <li>Cultural Notes</li>
@@ -163,35 +163,173 @@
             <h4>INTROUCTION</h4>
             <p>The main activities in the import and export business are purchasing, marketing and knowing related domestic & international procedures and administration. In order to familiarize these matters, the training course has been offered</p>
             <h4>COURSE CONTENTS</h4>
-            <ul class="ml-md-3">
+            <ul class="ml-ul">
               <li>General Steps for Import & Export Procedures</li>
-              <li>Import Procedures; Types of Importers;</li>
-              <li>Different types of L/Cs and Obligations of 
-                Different Parties involved in L/C;</li>
-              <li>Export Diversification and Quality 
-                Improvement;</li>
+              <li>Import Procedures; Types of Importers</li>
+              <li>Different types of L/Cs and Obligations of Different Parties involved in L/C</li>
+              <li>Export Diversification and Quality Improvement</li>
               <li>Export Procedures & Registration,</li>
               <li>Checking and Advising of Export L/C;</li>
               <li>EPC, ERF & Preparation of Export Documents,</li>
-              <li>	Negotiation of Export Documents,</li>
-              <li>Export Incentives, Disputes and Settlement of 
-                Export Claims;</li>
-                
-              <li>Functions of C & F Agents; Negotiations for 
-                Commission and Realization thereof;</li>
-              <li>Duties and Taxes for Importable Products in 
-                the Light of Latest Changes in National   
-                Budget;</li>
-              <li>Indenting Business in Bangladesh; Test of 
-                learning through group presentation.</li>
+              <li>Negotiation of Export Documents,</li>
+              <li>Export Incentives, Disputes and Settlement of  Export Claims</li>
+              <li>Functions of C & F Agents; Negotiations for Commission and Realization thereof;</li>
+              <li>Duties and Taxes for Importable Products in  the Light of Latest Changes in National Budget;</li>
+              <li>Indenting Business in Bangladesh. Test of learning through group presentation.</li>
             </ul>
-
           </div>
         </div>
       </div>
     </div>
   </section>
   <!-- end export import  -->
+  <!-- trainers -->
+  <section class="trainers mt-30" id="trainers">
+    <div class="container bg-red">
+      <div class=" row d-flex flex-row align-items-center">
+        <div class="col-md-5 col-lg-5 col-sm-12 "><h2 class="pl-90">OUR <br/>TRAINERS</h2></div>
+        <div class="col-md-7 col-lg-7 col-sm-12">
+          <div class="row d-flex flex-row align-items-center pt-4">
+            <div class="col-md-3 col-lg-3 col-sm-12 pb-4">
+              <img src="images/trainers/1.png" class="img-fluid" title="Dr. Mohammad Rafiqul Islam">
+            </div>
+            <div class="col-md-9 col-lg-9 col-sm-12">
+              <h4>Dr. Mohammad Rafiqul Islam, PhD</h4>
+              <p>Assistant Professor,<br/>
+              Chinese Language,<br/>
+              BRAC UNIVERSITY.</p>
+            </div>
+          </div>
+          <div class="row d-flex flex-row align-items-center">
+            <div class="col-md-3 col-lg-3 col-sm-12 pb-4">
+              <img src="images/trainers/jashim.png" class="img-fluid" title="Jashim Uddin">
+            </div>
+            <div class="col-md-9 col-lg-9 col-sm-12">
+              <h4>Jashim Uddin</h4>
+              <p>Chinese Language Expert &<br/>
+                Bangladesh- China Business Consultant<br/>
+                Masters in Management<br/>
+                (University of Rajshahi)<br/>
+                Diploma in Chinese Language<br/>
+                (National Taiwan University)</p>
+            </div>
+          </div>
+          <div class="row d-flex flex-row align-items-center">
+            <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
+              <img src="images/trainers/md-arif.png" class="img-fluid" title="Md Arif Khan">
+            </div>
+            <div class="col-md-9 col-lg-9 col-sm-12">
+              <h4>Jashim Uddin</h4>
+              <p>M.Com, MBA, PGDIM,<br/>
+                INT.DIPLOMA-SCM-(P)<br/>
+                Switzerland</p>
+            </div>
+          </div>
+          <div class="row d-flex flex-row align-items-center">
+            <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
+              <img src="images/trainers/md-ziaur.png" class="img-fluid" title="Md. Ziaur Rahman">
+            </div>
+            <div class="col-md-9 col-lg-9 col-sm-12">
+              <h4>Md. Ziaur Rahman</h4>
+              <p>Business Law Consultant<br/>
+                Legal Advisor of<br/>
+                Community Bank<br/>
+                Bangladesh Limited &<br/>
+                Consultant at BPKT,<br/>
+                Police Head Quartets, Dhaka.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end trainers -->
+  <!-- learners  -->
+  <section class="learners mt-30" id="learners">
+    <div class="container">
+      <div class=" row d-flex flex-row align-items-center">
+        <div class="col-md-5 col-lg-5 col-sm-12 "><h2 class="font-red pl-90">WHAT <br/>LEARNERS<br/>SAY</h2></div>
+        <div class="col-md-7 col-lg-7 col-sm-12">
+          <div class="row d-flex flex-row align-items-center pt-4">
+            <div class="col-md-3 col-lg-3 col-sm-12 pb-4">
+              <img src="images/learners/mohiuddin.png" class="img-fluid" title="MOHIUDDIN AHMED">
+            </div>
+            <div class="col-md-9 col-lg-9 col-sm-12">
+              <q class="text-italic ">Very good platfomr to accomplish courses at genuine cost...</q>
+              <h4 class="mt-3">MOHIUDDIN AHMED</h4>
+              <P>Manager Partner<br/> Tech Shadow</P>
+              
+            </div>
+          </div>
+          <div class="row d-flex flex-row align-items-center">
+            <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
+              <img src="images/learners/ahmed.png" class="img-fluid" title="AHMED ASIF">
+            </div>
+            <div class="col-md-9 col-lg-9 col-sm-12">
+              <q class="text-italic ">I really enjoyed classes of CLP..</q>
+              <h4 class="mt-3">AHMED ASIF</h4>
+              <P>Vice President<br/>Progoti Insurance Ltd.</P>
+            </div>
+          </div>
+          <div class="row d-flex flex-row align-items-center">
+            <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
+              <img src="images/learners/morshed.png" class="img-fluid" title="AZM MORSHED AL MAMUN">
+            </div>
+            <div class="col-md-9 col-lg-9 col-sm-12">
+              <q class="text-italic ">The place where we feel like a free bird. A place full of joy, pleasure and so many good people. Love chinese institute..!!</q>
+              <h4 class="mt-3">AZM MORSHED AL MAMUN</h4>
+              <P>LLB(Hons), LLM(RU)<br/>Advocate, Supreme Court of Bangladesh <br/>
+               EX. Assistant Atorney General<br/>
+              People's Republic of Bangladesh</P>
+            </div>
+          </div>
+          <div class="row d-flex flex-row align-items-center">
+            <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
+              <img src="images/learners/al.png" class="img-fluid" title="AL MIZAN">
+            </div>
+            <div class="col-md-9 col-lg-9 col-sm-12">
+              <q class="text-italic ">Knew about this place from my friend. I highly recomended this place. They teach realy well, the mentors are well experienced, helpful and friendly..!</q>
+              <h4 class="mt-3">AL MIZAN</h4>
+              <P>Managing Director<br/>Fatema Corporation</P>
+            </div>
+          </div>
+          <div class="row d-flex flex-row align-items-center">
+            <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
+              <img src="images/learners/khandokar.png" class="img-fluid" title="KHANDAKAR FAHMIDA HASAN">
+            </div>
+            <div class="col-md-9 col-lg-9 col-sm-12">
+              <q class="text-italic">One of the best institute for learning Chinese Language. They are very helpful and supportive. The class environment was so pretty. Finally they are trustworthy..</q>
+              <h4 class="mt-3">KHANDAKAR FAHMIDA HASAN</h4>
+              <P>BBA, MBA(Marketing)<br/>Dhaka University</P>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end learners -->
+  <!-- affiliation -->
+  <section class="affiliation mt-50" id="affiliates">
+    <div class="container bg-red">
+      <div class="row pt-20 pl-90 pr-90 d-flex flex-row align-items-center">
+        <div class="col-lg-7 col-md-7 col-sm-12">
+          <h2 class="mb-3">AFFILIATION & PARTNERS</h2>
+          <div class="partner">
+            <img src="images/ucep.png" class="img-fluid ">
+            <p class="pt-2">SOS Bangladesh</p>
+          </div>
+          <div class="partner ">
+            <img src="images/sos.png" class="img-fluid ">
+            <p class="pt-2">SOS Global Village</p>
+          </div>
+        </div>
+        <div class="col-lg-5 col-md-5 col-sm-12 ">
+          <img src="images/affiliate.png" class="img-fluid ">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end affiliation -->
   <section class="gallery mt-50 pt-4 pb-4" id="gallery">
     <div class="container bg-red">
       <div class="row">
