--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,46 +18,46 @@
     <div class="main-navigation sticker">
       <nav class="navbar navbar-expand-lg sticky-top gradient-bg-2" id="mainNav">
         <div class="container logo-box text-right">
-          <a class="navbar-brand" href="#"><img src="images/chinese-language.png"></a>
-            <form class="search" action="" method="POST">
-              <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="SEARCH" aria-label="Username" aria-describedby="basic-addon1">
-                <div class="input-group-append">
-                  <button class="pl-2 pr-2" type="submit">
-                    <i class="fa fa-search"></i>
-                  </button>
+          <a class="navbar-brand pl-md-5" href="javascript:void(0)"><img src="images/chinese-language.png"></a>
+            <div class="">
+              <form class="search d-md-block ml-md-auto mt-md-auto mr-md-0 mb-md-0" action="" method="POST">
+                <div class="input-group mb-3">
+                  <input type="text" class="form-control" placeholder="SEARCH" aria-label="Username" aria-describedby="basic-addon1">
+                  <div class="input-group-append">
+                    <button class="pl-2 pr-2" type="submit">
+                      <i class="fa fa-search"></i>
+                    </button>
+                  </div>
                 </div>
+              </form>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="lnr lnr-menu"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                  <li ><a href="#" class="current-menu">HOME</a></li>
+                    <li><a href="#about">ABOUT US</a></li>
+                    <li><a href="#course">ABOUT THE COURSE</a></li>
+                    <li><a href="#trainers">OUR TRAINERS</a></li>
+                    <li><a href="#learners">WHAT LEARNERS SAY</a></li>
+                    <li><a href="#discover">DISCOVER CHINA</a></li>
+                    <li><a href="#affiliates">AFFILIATION & PARTNERS</a></li>
+                    <li><a href="#gallery">GALLERY</a></li>
+                    <li><a href="#video">VIDEO</a></li>
+                    <li><a href="#contact">CONTACT US</a></li>
+                </ul>
               </div>
-            </form>
+            </div>
           </div>
       </nav>
     </div>
-    <nav class="navbar navbar-expand-lg sticky-top mb-3">
-      <div class="container logo-box text-right">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="lnr lnr-menu"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li ><a href="#" class="current-menu">Home</a></li>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#academic">Academic</a></li>
-              <li><a href="#admission">Admission</a></li>
-              <li><a href="#students">Students</a></li>
-              <li><a href="#notice">Notice</a></li>
-              <li><a href="#gallery">Gallery</a></li>
-              <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
   </header>
 
-  <section class="banner mt-50">
+  <section class="banner mt-2">
     <div class="container bg-red">
       <div class="row ">
-        <div class="col-lg-7 col-md-5 col-sm-12 why-us ">
+        <div class="col-lg-7 col-md-7 col-sm-12 why-us ">
           <div class="text-justify pl-90 slogan">
             <p>LEARN <span class="txt-big font-weight-bold">CHINESE</span></p>
             <p>IN THE FASTEST, <span class="txt-big font-weight-bold">EASIEST</span></p>
@@ -67,7 +67,7 @@
             <h2 class="pl-90 pt-2 pb-2 bg-dark">WHY CHOOSE US?</h2>
           </div>
           <div class="text-justify pl-90">
-            <ul>
+            <ul class="ml-ul">
               <li>NO BORING TEXT BOOKS</li>
               <li>ON DEMAND CONTENT</li>
               <li>JUST 24 LESSONS</li>
@@ -76,20 +76,20 @@
             <p class="tagline-bottom mt-30">Making Chinese Fun and Easy</p>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 pl-md-4 pl-lg-4 pt-40 pr-90">
+        <div class="col-lg-5 col-md-5 col-sm-12  pt-40 pr-90">
           <img src="images/why-us.png" class="img-fluid">
         </div>
       </div>
     </div>
   </section>
   <!-- about us -->
-  <section class="about-us mt-50">
+  <section class="about-us mt-50" id="about">
     <div class="container">
       <div class="row pl-90 pr-90">
         <div class="col-lg-6 col-md-6 col-sm-12 pl-md-4 pl-lg-4 ">
           <img src="images/about-us.png" class="img-fluid">
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 why-us ">
+        <div class="col-lg-5 col-md-6 col-sm-12">
           <div class="section-title mb-2">
             <h2>ABOUT US</h2>
           </div>
@@ -108,13 +108,13 @@
   </section>
   <!-- end about us -->
   <!-- CLP -->
-  <section class="clp">
+  <section class="clp" id="course">
     <div class="container bg-red">
       <div class="row pt-20">
         <div class="col-lg-7 col-md-7 col-sm-12 ">
           <img src="images/clp.png" class="img-fluid ">
         </div>
-        <div class="col-lg-5 col-md-6 col-sm-12 why-us ">
+        <div class="col-lg-5 col-md-5 col-sm-12 ">
           <div class="section-title title-right bg-dark mb-2 ">
             <h3 class="font-red p-1">CHINESE LANGUAGE PROGRAM(CLP)</h3>
           </div>
@@ -149,13 +149,13 @@
   </section>
   <!-- end CLP -->
   <!-- export import  -->
-  <section class="export mt-30">
+  <section class="export mt-30" id="export">
     <div class="container">
       <div class="row pt-20">
-        <div class="col-lg-7 col-md-7 col-sm-12 pt-md-5">
+        <div class="col-lg-7 col-md-7 col-sm-12">
           <img src="images/export-import.png" class="img-fluid ">
         </div>
-        <div class="col-lg-5 col-md-6 col-sm-12 why-us ">
+        <div class="col-lg-5 col-md-5 col-sm-12 why-us ">
           <div class="section-title mb-2 ">
             <h3 class="font-red p-1">EXPORT TRAINING</h3>
           </div>
@@ -330,11 +330,47 @@
     </div>
   </section>
   <!-- end affiliation -->
-  <section class="gallery mt-50 pt-4 pb-4" id="gallery">
+  <!-- disconver -->
+  <section class="discover mt-50" id="discover">
+    <div class="container">
+      <div class="row pl-90 pr-90">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <h2 class="mb-1 font-red">WHAT IS DISCOVER CHINA </h2>
+        </div>
+      </div>
+      <div class="row pl-90 pr-90">
+        <div class="col-lg-6 col-md-6 col-sm-12 slogan">
+          <p class="pb-3">NOT YOUR TYPICAL CHINESE COURSE.</p>
+          <P>DISCOVER CHINA <span class="txt-big font-weight-bold">EASIEST</span></P>
+          <P>IS FULL OF <span class="txt-big font-weight-bold">REAL</span></P>
+          <P>CHINESE <span class="txt-big font-weight-bold">CONVERSATION</span></P>
+          <h4 class="font-red mt-3">TOPICS COVERED</h4>
+          <ul class="ml-ul">
+            <li>Introducing yourself</li>
+            <li>Family introductions</li>
+            <li>Saying a bit about yourself</li>
+            <li>Ordering drinks</li>
+            <li>Ordering a meal</li>
+            <li>Doing some shopping</li>
+            <li>Asking for directions</li>
+            <li>Getting around by public transport</li>
+            <li>Finding and booking a hotel</li>
+            <li>Daily greetings 12 sessions.</li>
+            <li>Business and job interview 12 sessions.</li>
+          </ul>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 ">
+          <img src="images/Book.png" class="img-fluid ">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end discover  -->
+  <section class="gallery mt-50" id="gallery">
     <div class="container bg-red">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h4 class="mb-3 mt-3">PHOTO GALLERY</h4>
+          <h2 class="mb-3 mt-3">PHOTO GALLERY</h2>
         </div>
       </div>
       <div class="row pl-40 pr-40 pb-40">
@@ -377,16 +413,26 @@
       </div>
     </div>
   </section>
-
+  <!-- video  -->
+  <section class="video mt-50" id="video">
+    <div class="container">
+      <div class="row pl-40 pr-40 d-flex flex-row align-items-center">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <img src="images/video.png" alt="" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end video  -->
   <section class="contact pb-4 pt-5" id="contact">
     <div class="container bg-red">
       <div class="row ">
         <div class="col-md-8 offset-md-2 offset-lg-2 text-center">
-          <h4 class="text-uppercase mb-4 mt-4">contacts</h4>
+          <h2 class="text-uppercase mb-4 mt-4">contacts us</h2>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-md-8 offset-md-2 offset-lg-2 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
+        <div class="col-xs-12 col-md-8 col-sm-12 offset-md-2 offset-lg-2 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
           <form class="contact-form">
             <div class="form-group">
               <input type="text" class="form-control" id="name" placeholder="Name">
@@ -412,7 +458,7 @@
   <footer class="footer-area">
     <div class="container">
       <div class="footer-bottom row align-items-center">
-        <div class="col-lg-8 col-md-8 col-sm-12 footer-social mt-4 offset-md-2 offset-lg-2">
+        <div class="col-lg-8 col-md-8 col-sm-12 text-center footer-social mt-4 offset-md-2 offset-lg-2">
           <a href="https://www.facebook.com/shoroborno.sms" target="blank"><i class="fa fa-facebook"></i></a>
           <a href="https://twitter.com/augnitive" target="blank"><i class="fa fa-twitter"></i></a>
         </div>
