--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,7 +19,7 @@
       <nav class="navbar navbar-expand-lg sticky-top gradient-bg-2" id="mainNav">
         <div class="container logo-box text-right">
           <a class="navbar-brand pl-md-5" href="javascript:void(0)"><img src="images/chinese-language.png"></a>
-            <div class="">
+            <div class="menu-wrapper">
               <form class="search d-md-block ml-md-auto mt-md-auto mr-md-0 mb-md-0" action="" method="POST">
                 <div class="input-group mb-3">
                   <input type="text" class="form-control" placeholder="SEARCH" aria-label="Username" aria-describedby="basic-addon1">
@@ -32,7 +32,7 @@
               </form>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="lnr lnr-menu"></span>
+                <span class="lnr lnr-menu text-white"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -76,7 +76,7 @@
             <p class="tagline-bottom mt-30">Making Chinese Fun and Easy</p>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12  pt-40 pr-90">
+        <div class="col-lg-5 col-md-5 col-sm-12 hide-on-small pt-40 pr-90">
           <img src="images/why-us.png" class="img-fluid">
         </div>
       </div>
@@ -86,7 +86,7 @@
   <section class="about-us mt-50" id="about">
     <div class="container">
       <div class="row pl-90 pr-90">
-        <div class="col-lg-6 col-md-6 col-sm-12 pl-md-4 pl-lg-4 ">
+        <div class="col-lg-6 col-md-6 col-sm-12 pl-md-4 pl-lg-4 hide-on-small">
           <img src="images/about-us.png" class="img-fluid">
         </div>
         <div class="col-lg-5 col-md-6 col-sm-12">
@@ -187,9 +187,9 @@
   <section class="trainers mt-30" id="trainers">
     <div class="container bg-red">
       <div class=" row d-flex flex-row align-items-center">
-        <div class="col-md-5 col-lg-5 col-sm-12 "><h2 class="pl-90">OUR <br/>TRAINERS</h2></div>
+        <div class="col-md-5 col-lg-5 col-sm-12 "><h2 class="pl-90 title">OUR <span class="brk-word">TRAINERS</span></h2></div>
         <div class="col-md-7 col-lg-7 col-sm-12">
-          <div class="row d-flex flex-row align-items-center pt-4">
+          <div class="row d-flex flex-row align-items-center pt-4 profile">
             <div class="col-md-3 col-lg-3 col-sm-12 pb-4">
               <img src="images/trainers/1.png" class="img-fluid" title="Dr. Mohammad Rafiqul Islam">
             </div>
@@ -200,7 +200,7 @@
               BRAC UNIVERSITY.</p>
             </div>
           </div>
-          <div class="row d-flex flex-row align-items-center">
+          <div class="row d-flex flex-row align-items-center profile">
             <div class="col-md-3 col-lg-3 col-sm-12 pb-4">
               <img src="images/trainers/jashim.png" class="img-fluid" title="Jashim Uddin">
             </div>
@@ -214,7 +214,7 @@
                 (National Taiwan University)</p>
             </div>
           </div>
-          <div class="row d-flex flex-row align-items-center">
+          <div class="row d-flex flex-row align-items-center profile">
             <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
               <img src="images/trainers/md-arif.png" class="img-fluid" title="Md Arif Khan">
             </div>
@@ -225,7 +225,7 @@
                 Switzerland</p>
             </div>
           </div>
-          <div class="row d-flex flex-row align-items-center">
+          <div class="row d-flex flex-row align-items-center profile">
             <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
               <img src="images/trainers/md-ziaur.png" class="img-fluid" title="Md. Ziaur Rahman">
             </div>
@@ -248,9 +248,9 @@
   <section class="learners mt-30" id="learners">
     <div class="container">
       <div class=" row d-flex flex-row align-items-center">
-        <div class="col-md-5 col-lg-5 col-sm-12 "><h2 class="font-red pl-90">WHAT <br/>LEARNERS<br/>SAY</h2></div>
+        <div class="col-md-5 col-lg-5 col-sm-12 "><h2 class="font-red pl-90 title">WHAT <span class="brk-word">LEARNERS <span class="brk-word">SAY</span></h2></div>
         <div class="col-md-7 col-lg-7 col-sm-12">
-          <div class="row d-flex flex-row align-items-center pt-4">
+          <div class="row d-flex flex-row align-items-center pt-4 profile">
             <div class="col-md-3 col-lg-3 col-sm-12 pb-4">
               <img src="images/learners/mohiuddin.png" class="img-fluid" title="MOHIUDDIN AHMED">
             </div>
@@ -261,7 +261,7 @@
               
             </div>
           </div>
-          <div class="row d-flex flex-row align-items-center">
+          <div class="row d-flex flex-row align-items-center  profile">
             <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
               <img src="images/learners/ahmed.png" class="img-fluid" title="AHMED ASIF">
             </div>
@@ -271,7 +271,7 @@
               <P>Vice President<br/>Progoti Insurance Ltd.</P>
             </div>
           </div>
-          <div class="row d-flex flex-row align-items-center">
+          <div class="row d-flex flex-row align-items-center profile">
             <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
               <img src="images/learners/morshed.png" class="img-fluid" title="AZM MORSHED AL MAMUN">
             </div>
@@ -283,7 +283,7 @@
               People's Republic of Bangladesh</P>
             </div>
           </div>
-          <div class="row d-flex flex-row align-items-center">
+          <div class="row d-flex flex-row align-items-center profile">
             <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
               <img src="images/learners/al.png" class="img-fluid" title="AL MIZAN">
             </div>
@@ -293,7 +293,7 @@
               <P>Managing Director<br/>Fatema Corporation</P>
             </div>
           </div>
-          <div class="row d-flex flex-row align-items-center">
+          <div class="row d-flex flex-row align-items-center profile">
             <div class="col-md-3 col-lg-3 col-sm-12  pb-4">
               <img src="images/learners/khandokar.png" class="img-fluid" title="KHANDAKAR FAHMIDA HASAN">
             </div>
@@ -323,7 +323,7 @@
             <p class="pt-2">SOS Global Village</p>
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 ">
+        <div class="col-lg-5 col-md-5 col-sm-12 hide-on-small">
           <img src="images/affiliate.png" class="img-fluid ">
         </div>
       </div>
@@ -375,40 +375,40 @@
       </div>
       <div class="row pl-40 pr-40 pb-40">
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
         <div class="col-xs-12 col-md-3 mb-4 col-sm-12" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="500">
-          <img src="images/monno/gallery/1.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
+          <img src="images/gallery.jpg" alt="" class="img-fluid mb-3 mb-md-0 mb-lg-0">
         </div>
       </div>
     </div>
@@ -459,8 +459,11 @@
     <div class="container">
       <div class="footer-bottom row align-items-center">
         <div class="col-lg-8 col-md-8 col-sm-12 text-center footer-social mt-4 offset-md-2 offset-lg-2">
-          <a href="https://www.facebook.com/shoroborno.sms" target="blank"><i class="fa fa-facebook"></i></a>
-          <a href="https://twitter.com/augnitive" target="blank"><i class="fa fa-twitter"></i></a>
+          <a href="javascript:void(0)"><i class="icon twitter"></i></a>
+          <a href="javascript:void(0)"><i class="icon facebook"></i></a>
+          <a href="javascript:void(0)"><i class="icon instagram"></i></a>
+          <a href="javascript:void(0)"><i class="icon whatsapp"></i></a>
+          <a href="javascript:void(0)"><i class="icon youtube"></i></a>
         </div>
         <div class="col-lg-10 col-md-10 col-sm-12 offset-md-1 offset-lg-1 mt-4 section-title-footer">
           <h6 class=" text-center text-uppercase">Chinese Language</h6>
