background image modified

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -55,7 +55,7 @@
   </header>
 
   <section class="banner mt-2">
-    <div class="container bg-red">
+    <div class="container banner-bg">
       <div class="row ">
         <div class="col-lg-7 col-md-7 col-sm-12 why-us ">
           <div class="text-justify pl-90 slogan">
@@ -84,7 +84,7 @@
   </section>
   <!-- about us -->
   <section class="about-us mt-50" id="about">
-    <div class="container">
+    <div class="container about-bg">
       <div class="row pl-90 pr-90">
         <div class="col-lg-6 col-md-6 col-sm-12 pl-md-4 pl-lg-4 hide-on-small">
           <img src="images/about-us.png" class="img-fluid">
@@ -95,7 +95,7 @@
           </div>
           <div class="text-justify">
             <h4>WHO WE ARE</h4>
-            <p>With language skills growing in importance in the job market, yet fewer than 1 in 100 Bangladeshis able to speak a second language, 
+            <p>With language skills growing in importance in the job market, yet fewer than 1 in 100 Bangladeshis able to speak a second language,
               Chinese Institute is a national campaign aimed at making language proficiency a national priority.</p>
               <h4>WHAT WE DO</h4>
               <p>We seek to raise awareness across the country and motivate people to take action around the rapidly rising importance of language skills to a wide array of careers—and to our nation’s economy, national security and international standing.</p>
@@ -109,7 +109,7 @@
   <!-- end about us -->
   <!-- CLP -->
   <section class="clp" id="course">
-    <div class="container bg-red">
+    <div class="container course-bg">
       <div class="row pt-20">
         <div class="col-lg-7 col-md-7 col-sm-12 ">
           <img src="images/clp.png" class="img-fluid ">
@@ -150,7 +150,7 @@
   <!-- end CLP -->
   <!-- export import  -->
   <section class="export mt-30" id="export">
-    <div class="container">
+    <div class="container export-bg">
       <div class="row pt-20">
         <div class="col-lg-7 col-md-7 col-sm-12">
           <img src="images/export-import.png" class="img-fluid ">
@@ -185,7 +185,7 @@
   <!-- end export import  -->
   <!-- trainers -->
   <section class="trainers mt-30" id="trainers">
-    <div class="container bg-red">
+    <div class="container trainer-bg bg-red">
       <div class=" row d-flex flex-row align-items-center">
         <div class="col-md-5 col-lg-5 col-sm-12 "><h2 class="pl-90 title">OUR <span class="brk-word">TRAINERS</span></h2></div>
         <div class="col-md-7 col-lg-7 col-sm-12">
@@ -246,7 +246,7 @@
   <!-- end trainers -->
   <!-- learners  -->
   <section class="learners mt-30" id="learners">
-    <div class="container">
+    <div class="container learner-bg">
       <div class=" row d-flex flex-row align-items-center">
         <div class="col-md-5 col-lg-5 col-sm-12 "><h2 class="font-red pl-90 title">WHAT <span class="brk-word">LEARNERS <span class="brk-word">SAY</span></h2></div>
         <div class="col-md-7 col-lg-7 col-sm-12">
@@ -258,7 +258,7 @@
               <q class="text-italic ">Very good platfomr to accomplish courses at genuine cost...</q>
               <h4 class="mt-3">MOHIUDDIN AHMED</h4>
               <P>Manager Partner<br/> Tech Shadow</P>
-              
+
             </div>
           </div>
           <div class="row d-flex flex-row align-items-center  profile">
@@ -310,7 +310,7 @@
   <!-- end learners -->
   <!-- affiliation -->
   <section class="affiliation mt-50" id="affiliates">
-    <div class="container bg-red">
+    <div class="container affiliate-bg">
       <div class="row pt-20 pl-90 pr-90 d-flex flex-row align-items-center">
         <div class="col-lg-7 col-md-7 col-sm-12">
           <h2 class="mb-3">AFFILIATION & PARTNERS</h2>
@@ -332,7 +332,7 @@
   <!-- end affiliation -->
   <!-- disconver -->
   <section class="discover mt-50" id="discover">
-    <div class="container">
+    <div class="container discover-bg">
       <div class="row pl-90 pr-90">
         <div class="col-lg-12 col-md-12 col-sm-12">
           <h2 class="mb-1 font-red">WHAT IS DISCOVER CHINA </h2>
@@ -415,7 +415,7 @@
   </section>
   <!-- video  -->
   <section class="video mt-50" id="video">
-    <div class="container">
+    <div class="container video-bg">
       <div class="row pl-40 pr-40 d-flex flex-row align-items-center">
         <div class="col-lg-12 col-md-12 col-sm-12">
           <img src="images/video.png" alt="" class="img-fluid">
@@ -425,7 +425,7 @@
   </section>
   <!-- end video  -->
   <section class="contact pb-4 pt-5" id="contact">
-    <div class="container bg-red">
+    <div class="container bg-red contact-bg">
       <div class="row ">
         <div class="col-md-8 offset-md-2 offset-lg-2 text-center">
           <h2 class="text-uppercase mb-4 mt-4">contacts us</h2>
@@ -459,11 +459,11 @@
     <div class="container">
       <div class="footer-bottom row align-items-center">
         <div class="col-lg-8 col-md-8 col-sm-12 text-center footer-social mt-4 offset-md-2 offset-lg-2">
-          <a href="javascript:void(0)"><i class="icon twitter"></i></a>
-          <a href="javascript:void(0)"><i class="icon facebook"></i></a>
-          <a href="javascript:void(0)"><i class="icon instagram"></i></a>
-          <a href="javascript:void(0)"><i class="icon whatsapp"></i></a>
-          <a href="javascript:void(0)"><i class="icon youtube"></i></a>
+          <a href="https://twitter.com/chineseinstitu" target="_blank"><i class="icon twitter"></i></a>
+          <a href="javascript:void(0)" target="_blank"><i class="icon facebook"></i></a>
+          <a href="javascript:void(0)" target="_blank"><i class="icon instagram"></i></a>
+          <a href="javascript:void(0)" target="_blank"><i class="icon whatsapp"></i></a>
+          <a href="javascript:void(0)" target="_blank"><i class="icon youtube"></i></a>
         </div>
         <div class="col-lg-10 col-md-10 col-sm-12 offset-md-1 offset-lg-1 mt-4 section-title-footer">
           <h6 class=" text-center text-uppercase">Chinese Language</h6>
